--- a/WebSystem/WebSystem/Web.config
+++ b/WebSystem/WebSystem/Web.config
@@ -51,32 +51,24 @@
     <add key="URL" value="http://localhost:19902/Systestcomjun/Login.aspx"/>
   </appSettings>
   <connectionStrings>
-		<!--数据库链接字符串：本地测试配置-->
+    <!--数据库链接字符串：本地测试配置-->
     <add name="ConnectionString" connectionString="server=.;uid=sa;pwd=123456;database=YQW;"/>
-		<!--数据库链接字符串：服务器配置-->
+    <!--数据库链接字符串：服务器配置-->
     <!--<add name="ConnectionString" connectionString="server=120.76.240.175;uid=yqw;pwd=Yqw!@#123);database=YQW;"/>-->
   </connectionStrings>
   <!--配置文件夹匿名访问开始-->
   <location path="Systestcomjun">
     <system.web>
-			<!--如果遇到提示“如要授权”的情况，请将该配置注释掉（一般是注释掉）-->
+      <!--如果遇到提示“如要授权”的情况，请将该配置注释掉（一般是注释掉）-->
       <!--<authorization>
         <deny users="?"/>
       </authorization>-->
     </system.web>
   </location>
   <!--配置文件夹匿名访问结束-->
-  <!--
-    有关 .NET 4.5 的 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
-
-    可在 <httpRuntime> 标记上设置以下特性。
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime requestValidationMode="2.0"/>
+    <compilation debug="true" targetFramework="4.0"/>
+    <httpRuntime/>
     <webServices>
       <protocols>
         <add name="HttpPost"/>
@@ -91,7 +83,7 @@
     <customErrors mode="RemoteOnly" defaultRedirect="/404.aspx">
       <error statusCode="404" redirect="/404.aspx"/>
     </customErrors>
-		<!--forms配置需要屏蔽-->
+    <!--forms配置需要屏蔽-->
     <!--<authentication mode="Forms">
       <forms name="UserNameCookie" loginUrl="Systestcomjun/login.aspx" defaultUrl="Systestcomjun/HomeIndex.aspx" timeout="600"/>
     </authentication>-->
