--- a/WebSystem/WebSystem/WebSystem.csproj
+++ b/WebSystem/WebSystem/WebSystem.csproj
@@ -1129,7 +1129,7 @@
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>True</UseCustomServer>
-          <CustomServerUrl>http://www.uqingmng.com</CustomServerUrl>
+          <CustomServerUrl>http://192.168.30.91:8012</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
